MD Settings: Display: Fix update order

BUG=706473
For minor string change:
TBR=rdevlin.cronin@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2789183002
Cr-Commit-Position: refs/heads/master@{#462132}

Former-commit-id: a8d1cf20deff6c710b6d096d228b65b5520c0c3c